Add phone and background to page one

--- a/components/Phone/phone.module.css
+++ b/components/Phone/phone.module.css
@@ -1,18 +1,4 @@
-.container {
-display: flex;
-position: relative;
-align-items: center;
-height: 100%;
-width: auto;
-justify-content: center;
-}
-
-.phoneOuter {
-position: absolute;
-z-index: 1;
-}
-
-.phoneInner {
-position: absolute;
-z-index: 0;
+.phone {
+    width: 100%;
+    height: 100%;
 }
