--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -20,15 +20,15 @@
 
 .landing_container {
   display: flex;
-  position: relative;
+  justify-content: space-between;
   align-items: center;
-  justify-content: flex-end;
+  min-height: 100vh;
 }
 
 .multicolour_background {
-  position: absolute;
+  display: flex;
   width: 100%;
-  height: 80%;
+  height: 80vh;
   align-self: flex-start;
   background: linear-gradient(
     270deg,
@@ -39,11 +39,25 @@
   );
 }
 
+.page_heading {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
 .phone_container {
-  position: absolute;
-  height: 80%;
-  width: auto;
-  margin-right: 15%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  margin-top: 6%;
+  min-width: 260px;
+  min-height: 450px;
 }
 
 .teampage_container {
