--- a/components/InstructionCard/instructioncard.module.css
+++ b/components/InstructionCard/instructioncard.module.css
@@ -6,5 +6,15 @@
   box-shadow: 17px 17px 48px rgba(0, 0, 0, 0.12);
   border-radius: 30px;
   width: 100%;
-  height: 15%;
+  height: auto;
+  padding: 1rem;
+  margin-bottom: 1em;
+}
+
+.card_text_active {
+  color: black;
+}
+
+.card_text_inactive {
+  color: #6d6d6d;
 }
