--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,6 +6,7 @@
   overflow: auto;
   -ms-overflow-style: none;
   scrollbar-width: none;
+  font-family: "Raleway", sans-serif;
 }
 
 .content::-webkit-scrollbar {
@@ -75,7 +76,8 @@
 .instructions_container {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  align-items: center;
+  height: 0%;
   width: 100%;
 }
 
@@ -89,7 +91,8 @@
 .gif_container {
   display: flex;
   height: 100%;
-  width: 50%;
+  width: 30%;
+  margin-left: 5%;
 }
 
 .instructions {
@@ -98,7 +101,13 @@
   align-items: center;
   justify-content: center;
   height: 100%;
-  width: 50%;
+  width: 70%;
+  margin-left: 10rem;
+}
+
+.title_container {
+  display: flex;
+  align-items: center;
 }
 
 .gif_container {
@@ -107,9 +116,15 @@
   align-items: center;
 }
 
+.phone {
+  width: 100%;
+  height: 90%;
+}
+
 .instructions_star {
-  height: 7rem;
-  width: 7rem;
+  height: 3rem;
+  width: 3rem;
+  margin-right: 0.5rem;
 }
 
 .instructions_subheading {
@@ -119,9 +134,41 @@
 .instruction_cards {
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: space-between;
   height: auto;
   width: 100%;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.downloadContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  height: 15%;
+  background: linear-gradient(
+    270deg,
+    rgba(236, 162, 175, 0.5) 0%,
+    rgba(250, 180, 133, 0.5) 23.32%,
+    rgba(214, 246, 222, 0.5) 76.2%,
+    rgba(199, 217, 231, 0.5) 100%
+  );
+  border-radius: 20px;
+}
+
+.downloadButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #ffffff;
+  width: 95%;
+  height: 80%;
+  box-shadow: 17px 17px 48px rgba(0, 0, 0, 0.12);
+  border-radius: 20px;
+  font-size: 2rem;
+  font-weight: 700;
 }
 
 .multicolour_footer {
