--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -119,6 +119,7 @@
 .phone {
   width: 100%;
   height: 90%;
+  min-width: 250px;
 }
 
 .instructions_star {
@@ -183,4 +184,27 @@
     rgba(214, 246, 222, 0.5) 76.2%,
     rgba(199, 217, 231, 0.5) 100%
   );
+}
+
+@media (max-width: 800px) {
+  .multicolour_background {
+    flex-direction: column;
+    padding: 3rem;
+  }
+
+  .content {
+    scroll-snap-type: none;
+  }
+
+  .teampage_container {
+    height: auto;
+  }
+
+  .mission_container {
+  }
+
+  .phone_container {
+    margin-top: 0;
+    min-height: 80%;
+  }
 }
