--- a/components/Phone/phone.module.css
+++ b/components/Phone/phone.module.css
@@ -1,4 +1,10 @@
 .phone {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
+}
+
+@media (max-width: 800px) {
+  .phone {
+    min-height: 500px;
+  }
 }
