--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -189,11 +189,18 @@
 @media (max-width: 800px) {
   .multicolour_background {
     flex-direction: column;
-    padding: 3rem;
+    padding-top: 2%;
   }
 
   .content {
     scroll-snap-type: none;
+  }
+
+  .content > div {
+    min-height: 800px;
+  }
+
+  .landing_container {
   }
 
   .teampage_container {
