--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -189,22 +189,51 @@
 @media (max-width: 800px) {
   .multicolour_background {
     flex-direction: column;
-    padding: 3rem;
+    padding-top: 2%;
   }
 
   .content {
     scroll-snap-type: none;
+    width: 100vw;
+    height: 100vh;
   }
 
+  .content > div {
+    min-height: 800px;
+  }
+
+  /* .landing_container {
+  } */
+
+  .page_heading {
+    margin-bottom: 0;
+  }
   .teampage_container {
     height: auto;
   }
 
-  .mission_container {
-  }
+  /* .mission_container {
+  } */
 
   .phone_container {
     margin-top: 0;
     min-height: 80%;
+  }
+
+  .gif_container {
+    height: 50%;
+    width: 90%;
+  }
+
+  .instructions {
+    height: 50%;
+    width: 90%;
+    margin-left: 0;
+  }
+
+  .instructions_content {
+    flex-direction: column-reverse;
+    align-items: center;
+    padding-top: 5rem;
   }
 }
