--- a/components/QRCode/qrcode.module.css
+++ b/components/QRCode/qrcode.module.css
@@ -1,26 +1,28 @@
-.heading {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: "Raleway", sans-serif;
-}
+@media (min-width: 800px) {
+  .heading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Raleway", sans-serif;
+  }
 
-.boostcamp_star {
-  height: 6rem;
-  width: 6rem;
-  margin-right: 14px;
-  font-weight: 700;
-}
+  .boostcamp_star {
+    height: 6rem;
+    width: 6rem;
+    margin-right: 14px;
+    font-weight: 700;
+  }
 
-.heading h1 {
-  font-size: 3rem;
-  font-weight: 700;
-}
+  .heading h1 {
+    font-size: 3rem;
+    font-weight: 700;
+  }
 
-.tagline {
-  font-family: "Raleway", sans-serif;
-  font-size: 1.3rem;
-  font-weight: 700;
+  .tagline {
+    font-family: "Raleway", sans-serif;
+    font-size: 1.3rem;
+    font-weight: 700;
+  }
 }
 
 @media (max-width: 800px) {
@@ -30,7 +32,21 @@
   }
 
   .heading {
+    display: flex;
     flex-direction: column;
-    height: auto;
+    align-items: center;
+  }
+
+  .boostcamp_star {
+    height: 4rem;
+    width: 4rem;
+    margin: 0;
+  }
+
+  .heading h1 {
+    font-size: 2.5rem;
+    font-weight: 700;
+    margin: 1rem;
+    margin-bottom: 1.5rem;
   }
 }
