--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -235,6 +235,12 @@
 
   /* Last page */
 
+  .instructions_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   .instructions_content {
     display: flex;
     flex-direction: column-reverse;
@@ -282,10 +288,16 @@
 
   .downloadContainerPhone {
     display: flex;
+    align-content: center;
     align-items: center;
     justify-content: center;
-    width: 90vw;
-    height: 10vw;
+    text-align: center;
+    width: 90%;
+    height: 10rem;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+    font-size: 2.5rem;
+    font-weight: 700;
     background: linear-gradient(
       270deg,
       rgba(236, 162, 175, 0.5) 0%,
@@ -297,16 +309,13 @@
   }
 
   .downloadButton {
+    background: #ffffff;
+    width: 90%;
+    height: 80%;
+    border-radius: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #ffffff;
-    width: 90%;
-    height: 50%;
-    box-shadow: 17px 17px 48px rgba(0, 0, 0, 0.12);
-    border-radius: 20px;
-    font-size: 2rem;
-    font-weight: 700;
   }
 
   .gif_container {
@@ -317,5 +326,17 @@
   .phone {
     width: 80%;
     height: 100%;
+  }
+
+  .multicolour_footer {
+    background: linear-gradient(
+      270deg,
+      rgba(236, 162, 175, 0.5) 0%,
+      rgba(250, 180, 133, 0.5) 23.32%,
+      rgba(214, 246, 222, 0.5) 76.2%,
+      rgba(199, 217, 231, 0.5) 100%
+    );
+    height: 5rem;
+    width: 100%;
   }
 }
