--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -22,6 +22,7 @@
 
   .landing_container {
     display: flex;
+    flex-direction: row;
     position: relative;
     justify-content: space-between;
     align-items: center;
@@ -49,9 +50,10 @@
     flex-direction: column;
     height: 100vh;
     width: 100%;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     margin-bottom: 30px;
+    margin-left: 15%;
   }
 
   .phone_container {
@@ -59,6 +61,9 @@
     align-items: center;
     height: 85%;
     width: 100%;
+    margin-right: 10%;
+    margin-left: 3%;
+    min-width: 35%;
   }
 
   .teampage_container {
